<resources>
    <string name="app_name">SIC - Smart Index Cards</string>
    <string name="add_subject_button">+ Hinzufügen</string>
    <string name="empty_subject_list">Aktuell noch keine Fächer vorhanden</string>
    <string name="schedule_planner">Lernplaner</string>
    <string name="subject_button">Fächer</string>
    <string name="edit_text_subject">Titel deines Faches</string>
    <string name="plus_button">+</string>
    <string name="toast_for_no_subject">Gib den Titel für dein neues Fach ein</string>
    <string name="subject">Deine Fächer</string>
    <string name="toast_for_subject_already_exists">Dieses Fach existiert bereits</string>
    <string name="toast_for_new_subject_was_inserted">wurde zu Fächern hinzugefügt</string>
    <string name="delete_dialog">Willst du das Fach wirklich löschen?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="chosen_subject">Fach</string>
    <string name="chosen_date">Nächste Abfrage am</string>
    <string name="add_button_learnplaner">Speichern</string>
    <string name="chosen_time">Uhrzeit</string>
    <string name="schedule">Geplante Lerneinheiten</string>
    <string name="select_time">Wähle eine Zeit aus</string>
    <string name="no_subject_was_chosen">Kein Fach ausgewählt</string>
    <string name="no_schedulelist">Kein Lernplan erstellt</string>
    <string name="go_to_schedule">Zum Plan</string>
    <string name="subject_activity_header">Deine Lernoptionen zu</string>
    <string name="new_sic">Neue Karte</string>
    <string name="delete_schedule_dialog">Willst du diese Lerneinheit wirklich löschen?</string>
    <string name="produce_new_sic">Neue Karteikarte</string>
    <string name="question">Deine Frage</string>
    <string name="answer">Deine Antwort</string>
    <string name="save">Speichern</string>
    <string name="sic_quiz">Teste dich</string>
    <string name="instruction_text">Wische nach rechts, um die Lösung zu erfahren und nochmal um eine neue Frage zu erhalten!</string>
    <string name="overview_header">Deine sic-Übersicht</string>
    <string name="solution">Schreibe deine Lösung</string>
    <string name="enter">Eingabe</string>
    <string name="delete">Löschen</string>
    <string name="settings">Einstellungen</string>
    <string name="settings_test1">Test-Einstellung1</string>
    <string name="settings_test1_switch">Switch something</string>
    <string name="settings_test2">Test-Einstellung2</string>
    <string name="settings_test2_toggle">toggle something</string>
    <string name="settings_test3">Test-Einstellung3</string>
    <string name="settings_test3_radio">Test-RadioButton</string>
    <string name="actionbar_title_start">Smart Index Cards</string>
    <string name="learnplaner">Lernplaner</string>
    <string name="progress">Lernerfolg</string>
    <string name="quiz">Abfrage</string>
    <string name="subject_actionbar">Fach:</string>
    <string name="overview_actionbar">Kartenübersicht</string>
    <string name="index_card">Karteikarte</string>
    <string name="progress_heading">Dein Lernfortschritt</string>
    <string name="no_complete_card">Eingaben für eine korrekte SIC fehlen</string>
    <string name="new_card">Es wurde eine neue Karte für dein Fach hinzugefügt</string>
    <string name="no_answer_given">Bitte gib eine Antwort ein</string>
    <string name="right_answer_given">Das war richtig! Gut gemacht!</string>
    <string name="wrong_answer_given">Das war leider falsch. Das wird schon!</string>
    <string name="no_card_created">Du musst zuerst Karten erstellen</string>
    <string name="answered_all_questions">Gratuliere! Du hast alles richtig beantwortet</string>
    <string name="notification_preference">Benachrichtigung</string>
    <string name="notification_pref_description">Schalte deine Benachrichtigungen an oder aus</string>
    <string name="sound_preference">Ton</string>
    <string name="sound_pref_description">Schalte den Ton an oder aus</string>
    <string name="vibrate_preference">Vibrate</string>
    <string name="vibrate_pref_description">Schalte die Vibration an oder aus</string>
    <string name="no_new_card">Diese Frage existiert schon</string>
    <string name="almost_everything_right">Nicht ganz versuchs nochmal</string>
    <string name="no_cards_created">Aktuell sind noch keine Karten erstellt</string>
    <string name="choose_card">Klick auf eine Karte und swipe hoch</string>
    <string name="delete_card_dialog">Willst du die Karte wirklich löschen</string>
    <string name="delete_card">Die Karte wurde gelöscht</string>
    <string name="answer_equals_question">Antwort und Frage unterscheiden sich nicht</string>
    <string name="do_you_want_to_delete">Willst du Ausgewähltes wirklich löschen?</string>
    <string name="cards_want_to_select">Willst du Karten markieren, um sie zu löschen</string>
    <string name="schedules_want_to_select">Willst du Erinnerungen markieren, um sie löschen</string>
    <string name="subjects_want_to_select">Willst du Fächer markieren, um sie zu löschen</string>
    <string name="progress_no_cards">Erstelle zuerst Karteikarten und lass dich abfragen.
        Dann wird Dir hier dein Lernfortschritt angezeigt.</string>
    <string name="timepicker_title">Bitte wähle ein Zeit aus</string>
</resources>
