<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:orientation="vertical"
    android:id="@+id/fragment_container">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/settings_test1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_test1" />

        <Switch
            android:id="@+id/settings_test1_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_test1_switch" />

        <TextView
            android:id="@+id/settings_test2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_test2" />

        <ToggleButton
            android:id="@+id/settings_test2_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_test2_toggle" />

        <TextView
            android:id="@+id/settings_test3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_test3" />

        <RadioButton
            android:id="@+id/settings_test3_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_test3_radio" />

    </LinearLayout>

</FrameLayout>