<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/subject_activity_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/produce_new_sic"
        android:layout_gravity="center"
        android:textSize="25sp"/>

    <LinearLayout
        android:id="@+id/column_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:id="@+id/question_id"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:hint="@string/question"
            android:textSize="25sp"
            android:textAlignment="center"
            android:background="@drawable/karteikarte"
            android:inputType="text|textMultiLine"
            android:maxLength="200"
            android:maxLines="5"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:id="@+id/answer_id"
            android:hint="@string/answer"
            android:textSize="25sp"
            android:textAlignment="center"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:background="@drawable/karteikarte"
            android:inputType="text|textMultiLine"
            android:maxLength="200"
            android:maxLines="5"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/save"
            android:layout_marginBottom="3dp"
            android:id="@+id/save_button_id"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/buttons_id"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:weightSum="1">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/subject_button"
            android:id="@+id/subject_button_id"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/overview_actionbar"
            android:id="@+id/schedule_planner_button_id"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle"
            />

    </LinearLayout>

</LinearLayout>