<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/overview_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/overview_textview_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/overview_header"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/overview_linear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.99"
        android:background="@android:color/white"
        android:orientation="horizontal"
        >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_overview"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@android:color/white"
            tools:listitem="layout/recyclerview_subject_item" />

        <TextView
            android:id="@android:id/empty"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/no_cards_created"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/overview_card"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.5"
            android:background="@drawable/karteikarte"
            android:gravity="center"
            android:text="@string/choose_card"
            android:textAlignment="center"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="0.01"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/subject_button_id"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:text="@string/subject_button"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/schedule_planner_button_id"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:text="@string/schedule_planner"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>