<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frame_layout" >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/subject_activity_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:text="@string/sic_quiz"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/question_id"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@drawable/karteikarte"
        android:scaleX="0.8"
        android:scaleY="0.5" />

    <LinearLayout
        android:id="@+id/buttons_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/subject_button_id"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:text="@string/subject_button"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/schedule_planner_button_id"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:text="@string/schedule_planner"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/instruction_layer_id">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/instruction_text"
            android:textSize="25sp"
            android:gravity="bottom|center"
            android:paddingBottom="70dp"
            android:textColor="@color/colorPrimaryLight"
            />

    </RelativeLayout>

</FrameLayout>