<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:weightSum="1">

    <!-- https://codelabs.developers.google.com/codelabs/android-room-with-a-view/#9 -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@android:color/white"
        tools:listitem="layout/recyclerview_subject_item"
        android:layout_weight="0.95"/>

    <TextView
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_subject_list"
        android:layout_marginTop="100dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_weight="0.95"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_weight="0.05"
        android:weightSum="1">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/subject_button"
            android:id="@+id/subject_button_id"
            android:background="@color/colorPrimaryLight"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/schedule_planner"
            android:id="@+id/schedule_planner_button_id"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>